--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <ul>
             <li class="brand"><img src="logo.png" alt="AJ Songs"> AJ Songs</li>
-            <li><a href="https://anil2005-art.github.io/ajmusic2026/">Home</a></li>
+            <li><a href="https://anil2005-art.github.io/ajmusic2026">Home</a></li>
             <li>About</li>
         </ul>
     </nav>
