--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                 </div>
             </div>
         </div>
-        <div class="songBanner"></div>
+       <div class="songBanner"></div>
     </div>
 
-   <div class="bottom">
+    <div class="bottom">
         <input type="range" name="range" id="myProgressBar" min="0" value="0" max="100">
         <div class="icons">
             <!-- fontawesome icons -->
@@ -85,14 +85,24 @@
 <!-- Optional: Next & Previous Buttons -->
 <button id="previous"><i class="fas fa-backward"></i></button>
 <button id="next"><i class="fas fa-forward"></i></button>
-        </div>
-       <img id="gif" src="playing.gif" style="opacity: 0; width: 50px;" alt="playing animation">
 
-        <div class="songInfo">
-            <img src="playing.gif" width="42px" alt="" id="gif"> <span id="masterSongName">Insaanile Ft Hanan Shaah</span>
-        </div>
-    </div>
+    <div>
+ <div class="songInfo">
+  <button id="masterPlay"><i class="fas fa-play-circle"></i></button>
+  <span id="masterSongName">Warriyo - Mortals [NCS Release]</span>
+  <img src="playing.gif" width="42px" alt="" id="gif">
+</div>
+
+<!-- Gif to show when playing -->
+<img id="gif" src="playing.gif" style="opacity: 0; width: 50px;" alt="playing animation">
+
+    
     <script src="script.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://kit.fontawesome.com/26504e4a1f.js" crossorigin="anonymous"></script>
+</body>
+</html>kit.fontawesome.com/26504e4a1f.js" crossorigin="anonymous"></script>
 </body>
 </html>
